--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,70 @@
+# === Python Cache Files ===
+__pycache__/
+*.py[cod]
+*.pyo
+
+# === Virtual Environments ===
 venv
+env/
+.venv/
+
+# === IDEs / Editors ===
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# === OS Files ===
+.DS_Store
+Thumbs.db
+
+# === Database ===
+*.sqlite3
+*.db
+
+# === Django Specific ===
+*.log
+*.pot
+*.pyc
+media/
+staticfiles/
+local_settings.py
+
+# === Django Migrations ===
+**/migrations/
+!*/migrations/__init__.py  # Keep init file so Django still detects the app
+
+# === Environment Variables ===
+.env
+.env.*
+
+# === Test / Coverage ===
+.coverage
+htmlcov/
+.tox/
+.pytest_cache/
+.nox/
+
+# === MyPy / Type Checking ===
+.mypy_cache/
+.dmypy.json
+.pyre/
+
+# === Deployment / Docker (optional) ===
+*.log
+*.pid
+*.seed
+*.bak
+*.tmp
+*.swp
+*.orig
+
+# === Node Stuff (if frontend in same repo) ===
+node_modules/
+dist/
+build/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+posts/__pycache__/models.cpython-312.pyc
+posts/__pycache__/models.cpython-312.pyc
